discussion/kv_engine/155615/155615_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46844: PIMPL VB::Manifest::map

Use PIMPL for the VB::Manifest::map so that we can remove the include
of folly's F14Map from this header (which is included in over 20 files).
The include of the F14Map has been added to vbucket_manifest_handles.h
for now but will be remove in a future change after utilising PIMPL
there for the iterators.

Change-Id: Id808e31297e4085583393b8a2e38094261c58ad8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-06-11 12:30:57.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 13:13:01.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36761/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36761/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9792/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9792/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9792/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8386/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/309/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31421/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19378/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10443/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11367/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11516/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11793/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-11 14:32:11.000000000
Message: 
Patch Set 1: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 14:41:40.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9792/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9792/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9792/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8386/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/309/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31421/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19378/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10443/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11367/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11516/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11793/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36772/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 16:04:00.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9813/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9813/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9813/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8386/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36772/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/309/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31421/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19378/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10443/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11367/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11516/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11793/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 16:30:43.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9818/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9818/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9818/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8386/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36772/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/309/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31421/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19378/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10443/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11367/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11516/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11793/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-14 12:34:00.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
